Restructure recipe edit form and fix message spacing.

--- a/app/aandete/public/style.css
+++ b/app/aandete/public/style.css
@@ -72,15 +72,22 @@ input, textarea {
     border: 2px solid #888;
 }
 
+.recipe_form_text {
+    float: left;
+}
+
 .recipe_form_ingredients {
+    position: relative;
     width: 12em;
     position: absolute;
-    margin-left: 26em;
+    margin-left: 1em;
+    margin-top: -1em;
     background: #ccf;
 }
 
 .recipe_form_submit {
     clear: both;
+    float: left;
     width: 12em;
     background: #cfc;
 }
@@ -128,6 +135,8 @@ input, textarea {
 
 .message {
     padding: 0.5em;
+    margin-right: 1em;
+    margin-bottom: 0.5em;
     border: solid 1px;
     background: #ccccff;
 }
